feat: Implement GET /pets endpoint
We now have GET /pets endpoint implemented

Unit test for GET /pets endpoint

--- a/swiftflame/templates/index.html
+++ b/swiftflame/templates/index.html
@@ -1,14 +1,7 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>
-      PetsRUs API
-    </title>
-  </head>
-  <body>
+{% extends "base.html" %}
+
+{% block content %}
     <h2>
       PetsRUs API
     </h2>
-  </body>
-</html>
+{% endblock  %}
